# uop_coursework

./: readme.md
adv_digital/: .gitignore  README.md
adv_digital/project_1/: p1_arm.asm  p1_mips.asm
adv_digital/project_2/: testScript.do
adv_digital/project_2/tests/: arith.txt  bool.txt  comp.txt  first.txt  full.txt  shift.txt  testALU.sv
adv_digital/project_3_beta/: beta.sv  betaTest.do  comp.sv  ctl.sv  pc.sv  regfile.sv
adv_digital/project_3_beta/tests/: aluRadix  basicCode.txt  ctl.txt  dataMem.txt  dmem.sv  funcRadix.txt  imem.sv  mipsCode.txt  opRadix.txt  pc.txt  reg.txt  testBeta.sv  testCtl.sv  testPc.sv  testReg.sv
adv_digital/project_4/: arith.sv  beta.sv  betaTest.do  bool.sv  ctl.sv  pc.sv  regfile.sv
adv_digital/project_4/tests/: dmem4.sv  (+5 more)
adv_digital/project_5/: alu.sv  beta.sv  betaTest.do  cache.sv  cachectl.sv  ctl.sv  flowctl.sv  pc.sv  shift.sv
compint/: README.md
compint/HW/: MatlabPrimer.mlx
compnet/: readme.md
compnet/project_1/: main.py
compnet/project_2/: traceroute.py
compnet/project_3/: server.py
compnet/project_4/: main.py
compnet/project_5/: port_scanner.py
cv/: .gitignore  README.md  report.md
cv/01_px_processing/: CMakeLists.txt  README.md  px_processing.cpp
cv/01_px_processing/functions/: morpho.cpp  thresholding.cpp
cv/02_detection/: CMakeLists.txt  README.md  classification.cpp  classification.hpp  connected_components.cpp  connected_components.hpp  detection  detection.cpp  moment.cpp  moment.hpp  pca.cpp  pca.hpp  region.cpp  region.hpp  wall.cpp  wall.hpp
cv/02_detection/pxfuncs/: floodfill.cpp  histeq.cpp  pixelfuncs.hpp  thresholding.cpp
cv/03_canny/: CMakeLists.txt  README.md  canny.cpp  convolution.hpp  kernels.cpp  kernels.hpp  proc.cpp  proc.hpp
cv/04_mosaicking/: README.md  correlate.m  correlate_ssd.m  correspondences.m  correspondences_from_matt.txt  corrs.txt  homography.m  mosaicking.m  ssd.m  transform.m
data/: README.md
hpc/: .gitignore  README.md
hpc/ML_SNN/: Makefile  morris.c  parallel_16.csv  parallel_2.csv  parallel_32.csv  parallel_4.csv  parallel_8.csv  serial_data.txt  serialtime.sh  slurm16.sh  slurm2.sh  slurm32.sh  slurm4.sh  slurm8.sh
hpc/PA1/: Makefile  main.c
hpc/PA2/: author
os/: .gitignore  readme.md
(+153 files in other folders)
